[Misc] Fix blocker sonarcloud-reported issue